# ldm

./: AUTHORS  LTSP_LOGO_COPYRIGHT  Makefile.am  README  README-DEVELOPMENT-POLICY  autogen.sh  configure.ac  generate_locale_list.py  release.conf
debian/: changelog  control  copyright  ldm-server.install  ldm-server.manpages  ldm-server.postinst  ldm.install  ldm.links  ldm.manpages  ldm.postinst  ldm.prerm  rules  watch
debian/doc/: ldm-init
debian/patches/: kfreebsd-hacks.dpatch  lliurex-scripts  lliurex-translation_patch  llx_ldm_password.patch  python3-shebang  remove-hackish-gettext-function  series  use-utf8-locale-to-generate-locale-lists
gtkgreet/: Makefile.am  greeter.c  greeter.h  hostwin.c  langwin.c  prefs.c  prefs.h  prefwin.c  prefwin.h  sesswin.c
ldminfod/: ldminfod
ldminfod/doc/: ldminfod.8
ldminfod/xinetd.d/: ldminfod
ltsp-cluster-info/: Makefile.am  ltsp-cluster-info
man/: ldm.1
misc/: Makefile.am  ldm-dialog.1  ldm-dialog.c
po/: LINGUAS  POTFILES.in  ast.po  be.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gd.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  ldm.pot  lt.po  ms.po  my.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  regenerate-pot  ro.po  ru.po  se.po  (+12 more)
po/ltsp-cluster-info/: Makefile.in.in  el.po  fr.po  ltsp-cluster-info.pot  pt_BR.po  sk.po  zh.po  zh_TW.po
po/rc.d/: Makefile.in.in  el.po  fr.po  ldmrc.pot  pt_BR.po  sk.po  zh.po  zh_TW.po
rc.d/: I01-nbd-checkupdate  Makefile.am  X50-dmrc-processing  X50-generate-env  X95-run-x-session
screen.d/: Makefile.am  ldm
share/: Makefile.am  ldm-script.in
src/: Makefile.am  ldm.c  ldm.h  ldmgreetercomm.c  ldmgreetercomm.h  ldminfo.c  ldminfo.h  ldmplugin.c  ldmplugin.h  ldmutils.c  ldmutils.h  logging.c  logging.h  plugin.c  plugin.h
src/plugins/rdesktop/: Makefile.am  rdesktop.c  rdesktop.h
src/plugins/ssh/: Makefile.am  ssh.c  ssh.h
themes/: Makefile.am
wwm/: Makefile.am  README  client.c  events.c  main.c  mapfunctions.c  misc.c  new.c  screen.c  sendkey.c  wwm-defaults.h  wwm.h
